# cpp_template

./: CMakeLists.txt  bootstrap.sh  vcpkg.json
src/: main.cpp
